[package]
edition = "2021"
name = "ephemeris_explorer"
version = "0.1.0"

[lints.clippy]
too_many_arguments = "allow"

[build-dependencies]
embed-resource = "1"

[dependencies]
bevy = { version = "=0.15.2", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "x11",
    "jpeg",
    "bevy_remote",
] }
bevy_window = { version = "=0.15.2" }

bevy_egui = { version = "0.33.0", features = ["immutable_ctx"] }
egui_extras = { version = "0.31.0" }
big_space = { version = "0.9.1", features = ["camera"] }
bevy_file_dialog = { git = "https://github.com/richardhozak/bevy_file_dialog.git" }
futures-util = { version = "0.3.31", features = ["io"] }
image = { version = "0.25", default-features = false }
winit = { version = "0.30", default-features = false }

particular = { git = "https://github.com/Canleskis/particular.git", features = [
    "glam",
] }
async-channel = "2.3.0"
hifitime = "4.0.2"
poly_it = { version = "0.2.4", features = ["smallvec", "serde"] }
smallvec = { version = "1.13.2", features = ["serde"] }
thousands = "0.2.0"
uuid = { version = "1.1", features = ["v4"] }
deepsize = "0.2.0"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
toml = "0.8"
thiserror = "2"
rand = "0.8"
dirs = "6.0.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true
