[package]
edition = "2021"
name = "ephemeris_explorer"
version = "0.1.2"

[lints.clippy]
too_many_arguments = "allow"

[build-dependencies]
embed-resource = "1"

[dependencies]
integration = { path = "integration" }
ftime = { path = "ftime", features = ["serde"] }
ephemeris = { path = "ephemeris" }

bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "x11",
    "jpeg",
    "std",
    "async_executor",
    "bevy_remote",
] }

bevy_egui = { version = "0.36.0" }
egui_extras = { version = "0.32.3" }
big_space = { version = "0.10.0", features = ["camera"] }
bevy_file_dialog = { version = "0.8.0" }

futures-util = { version = "0.3.31", features = ["io"] }
image = { version = "0.25", default-features = false }
winit = { version = "0.30", default-features = false }

particular = { git = "https://github.com/Canleskis/particular.git", features = [
    "glam",
] }
smallvec = { version = "1.13.2", features = ["serde"] }
uuid = { version = "1.1", features = ["v4"] }

thousands = "0.2.0"
pretty-type-name = "1.0.1"

async-channel = "2.3.0"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
toml = "0.8"
thiserror = "2"
dirs = "6.0.0"
deepsize = "0.2.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true
