[workspace]
resolver = "3"
members = [
    "ephemeris_explorer",
    "ephemeris",
    "integration",
    "ftime",
    "horizons_solar_system",
    "solar_system_json",
    "bevy_gizmos_render",
]

default-members = ["ephemeris_explorer"]

[workspace.package]
edition = "2024"

[workspace.lints.clippy]
too_many_arguments = "allow"

[workspace.dependencies]
integration = { path = "integration" }
ftime = { path = "ftime" }
ephemeris = { path = "ephemeris" }
horizons_solar_system = { path = "horizons_solar_system" }
glam = "0.30"
particular = { git = "https://github.com/Canleskis/particular.git" }

[patch.crates-io]
bevy_gizmos_render = { path = "bevy_gizmos_render" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true
