[package]
name = "ephemeris"
edition = "2024"
version = "0.1.0"

[features]
# default = []
# serde = ["dep:serde"]

[dependencies]
ftime = { path = "../ftime" }
integration = { path = "../integration" }
num-traits = "0.2.19"

particular = { git = "https://github.com/Canleskis/particular.git", features = [
    "glam",
] }
deepsize = "0.2.0"
smallvec = { version = "1.13.2", features = ["serde"] }

[dev-dependencies]
particular = { git = "https://github.com/Canleskis/particular.git", features = [
    "glam",
] }
glam = "0.29.3"
twofloat = "0.8.4"

horizons_solar_system = { path = "../horizons_solar_system" }
bincode = { version = "2", features = ["serde"] }
