[package]
name = "ephemeris"
edition = "2024"
version = "0.1.0"

[features]
# default = []
# serde = ["dep:serde"]

[dependencies]
ftime = { workspace = true }
integration = { workspace = true }
particular = { workspace = true }

num-traits = "0.2.19"
deepsize = "0.2.0"
smallvec = { version = "1.13.2", features = ["serde"] }

[dev-dependencies]
glam = { workspace = true }
particular = { workspace = true, features = ["glam"] } 
twofloat = "0.8.4"

horizons_solar_system = { workspace = true }
bincode = { version = "2", features = ["serde"] }
