[package]
edition = "2024"
name = "ephemeris_explorer"
version = "0.1.2"

[lints.clippy]
too_many_arguments = "allow"

[build-dependencies]
embed-resource = "1"

[dependencies]
integration = { workspace = true }
ftime = { workspace = true, features = ["serde"] }
ephemeris = { workspace = true }
particular = { workspace = true, features = ["glam"] }

bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_log",
    "mesh_picking",
    "bevy_pbr",
    "bevy_post_process",
    "bevy_picking",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_render",
    "sprite_picking",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "ui_picking",
    "bevy_window",
    "bevy_winit",
    "bevy_anti_alias",
    "custom_cursor",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "x11",
    "jpeg",
    "std",
    "async_executor",
    "bevy_remote",
] }

bevy_egui = { version = "0.39" }
egui_extras = { version = "0.33" }
big_space = { version = "0.12" }
bevy_file_dialog = { version = "=0.9.1" }

futures-util = { version = "0.3.31", features = ["io"] }
image = { version = "0.25", default-features = false }
winit = { version = "0.30", default-features = false }

smallvec = { version = "1.13.2", features = ["serde"] }
uuid = { version = "1.1", features = ["v4"] }

uom = "0.38"
thousands = "0.2.0"
pretty-type-name = "1.0.1"

async-channel = "2.3.0"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
toml = "0.8"
thiserror = "2"
dirs = "6.0.0"
deepsize = "0.2.0"
