[package]
name = "horizons_solar_system"
version = "0.1.0"
edition = "2024"

[dependencies]
ftime = { path = "../ftime", features = ["serde"] }
glam = { version = "0.29.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }